# Browser.AI

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_INTELLIGENT_SELECTION.md  CHANGELOG_SUMMARY.md  CHATBOT_ONE_QUESTION_AT_A_TIME.md  CONVERSATIONAL_AGENT_PLAN.md  CONVERSATIONAL_IMPLEMENTATION_SUMMARY.md  CONVERSATIONAL_QUICK_REFERENCE.md  Dockerfile  GUI_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LAUNCHER_SUMMARY.md  LIVE_VOICE_MODE_QUICK_START.md  LOCATION_AND_FAST_RESULTS.md  MLOPS_IMPLEMENTATION_SUMMARY.md  MLOPS_README.md  QUICK_START.md  RUN_PROJECT_GUIDE.md  SHOPPING_WORKFLOW_FIX.md  conftest.py  demo.py  demo_chat_interface.py  docker-compose.yml  example_integration.py  examples.py  integration_example.py  launch.py  launch_desktop.py  launch_web.py  mlops_demo.py  pyproject.toml  quick_start_examples.py  run_project.py  start.bat  start.sh  structured_events_demo.py  test_chat_gui.py  test_config_fix.py  (+9 more)
.github/: copilot-instructions.md
browser_ai/: __init__.py  location_service.py  logging_config.py
browser_ai_extension/: CDP_WEBSOCKET_README.md  CHATBOT_FEATURE_README.md  LOG_STREAMING_FIX.md  PROTOCOL_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  QUICK_START_CHATBOT.md  QUICK_START_STUCK_DETECTION.md  QUICK_START_UI.md  STATE_MANAGEMENT.md  STUCK_DETECTION_FEATURE.md  STUCK_DETECTION_IMPLEMENTATION_SUMMARY.md  UX_IMPROVEMENTS.md
browser_ai_gui/: README.md  __init__.py  cdp_websocket_server.py  chatbot_service.py  config.py  event_adapter.py  main.py  protocol.py  stuck_detector.py  tkinter_gui.py  web_app.py  websocket_server.py
(+213 files in other folders)
