[project]
name = "Browser.AI"
description = "Make websites accessible for AI agents"
authors = [
    { name = "Sathursan S"},
    { name = "Samyuktha V" },
]
version = "0.1.37"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "MainContentExtractor>=0.0.4",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "langchain==0.3.14",
    "langchain-openai==0.3.1",
    "langchain-anthropic==0.3.3",
    "langchain-ollama==0.2.2",
    "langchain-fireworks>=0.2.6",
    "langchain-aws>=0.2.11",
    "langchain-google-genai==2.0.8",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "posthog>=3.7.0",
    "playwright>=1.49.0",
    "setuptools>=75.8.0",
    "lmnr[langchain]>=0.4.59",
    "markdownify==0.14.1",
    "gradio>=5.44.1",
    "tk>=0.1.0",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
]

[project.optional-dependencies]
dev = [
    "tokencost>=0.1.16",
    "hatch>=1.13.0",
    "build>=1.2.2",
]
gui = [
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "eventlet>=0.33.0",
]

[project.scripts]
browser-ai-web = "browser_ai_gui.main:run_web_app"
browser-ai-desktop = "browser_ai_gui.main:run_tkinter_gui"

[tool.ruff]
line-length = 130
select = ["E", "F", "I"]
fix = true

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
